<resources>
    <string name="app_name">Eventech</string>
    <string name="sample_event_title">Evento Ejemplo 2017</string>
    <string name="sample_event_country">País Ejemplo</string>
    <string name="sample_event_city">Ciudad Ejemplo</string>
    <string name="sample_event_type">Conferencia</string>
    <string name="sample_event_date">00/00/2017</string>
    <string name="sample_event_venue_name">Evento Lugar Nombre</string>
    <string name="sample_event_venue_address">Evento Ejemplo Direccion</string>
    <string name="sample_event_latitude">-12.0836453</string>
    <string name="sample_event_longitude">-77.0514911</string>
    <string name="sample_event_url">http://www.gdgopen.com</string>
    <string name="label_venue">Lugar del evento</string>
    <string name="hint_venue_name">Ingrese el nombre del lugar del evento</string>
    <string name="hint_venue_address">Ingrese la dirección del lugar del evento</string>
    <string name="btn_save_event">Guardar</string>
    <string name="unknown_error">Se produjo un error desconocido.</string>
    <string name="sign_in_cancelled">Ha cancelado el inicio de sesión</string>
    <string name="message_empty_list">No hay elementos para mostrar</string>
    <string name="message_not_connected">No hay conexión a internet.</string>
    <string name="label_select_country">Seleccione el país</string>
    <string name="hint_insert_city">Ingrese la ciudad</string>
    <string name="label_insert_event_date">Ingrese la fecha del evento</string>
    <string name="label_select_event_type">Seleccione el tipo de evento</string>
    <string name="hint_insert_event_name">Ingrese el nombre del evento</string>
    <string name="hint_insert_event_url">Ingrese la url del evento</string>
    <string name="hint_insert_event_date">dd/mm/aaaa</string>
    <string name="label_detail_date">Fecha</string>
    <string name="label_detail_city">Ciudad</string>
    <string name="label_detail_country">País</string>
    <string name="label_detail_type">Tipo de evento</string>
    <string name="label_button_rsvp">Ir a web del evento</string>
    <string name="content_description_event_image">Esta es una imagen representativa del evento</string>
</resources>
