<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
                                                 xmlns:app="http://schemas.android.com/apk/res-auto"
                                                 android:layout_width="match_parent"
                                                 android:layout_height="match_parent"
                                                 android:fitsSystemWindows="true">

    <android.support.design.widget.AppBarLayout
        android:id="@+id/app_bar_layout"
        style="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fitsSystemWindows="true">

        <android.support.design.widget.CollapsingToolbarLayout
            android:id="@+id/collapsing_toolbar_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fitsSystemWindows="true"
            app:collapsedTitleGravity="center_vertical"
            app:collapsedTitleTextAppearance="@style/text_collapse_appearance"
            app:expandedTitleGravity="bottom"
            app:expandedTitleTextAppearance="@style/label_transparent"
            app:layout_scrollFlags="scroll|exitUntilCollapsed">

            <ImageView
                android:id="@+id/img_event_detail_cover"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:contentDescription="@string/content_description_event_image"
                android:fitsSystemWindows="true"
                android:scaleType="centerCrop"
                android:src="@drawable/default_image"
                android:transitionName="activity_image_transition"
                app:layout_collapseMode="parallax"/>

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/gradient_shadown"/>

            <android.support.v7.widget.Toolbar
                android:id="@+id/app_bar"
                android:layout_width="match_parent"
                android:layout_height="?actionBarSize"
                android:gravity="top"
                android:popupTheme="@style/ThemeOverlay.AppCompat.Light"
                android:titleMarginTop="@dimen/size_16dp"
                app:layout_collapseMode="pin"
                app:navigationIcon="@drawable/arrow_left"
                />


        </android.support.design.widget.CollapsingToolbarLayout>
    </android.support.design.widget.AppBarLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:nestedScrollingEnabled="true"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="@dimen/size_16dp"
            >

            <TextView
                android:id="@+id/txt_detail_event_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:layout_marginTop="16dp"
                android:text="@string/sample_event_title"
                android:textAppearance="@style/Base.TextAppearance.AppCompat.Large"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/label_detail_date"
                android:textAppearance="@style/Base.TextAppearance.AppCompat.Caption"/>


            <TextView
                android:id="@+id/txt_detail_event_date"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/sample_event_date"
                android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/label_detail_type"
                android:textAppearance="@style/Base.TextAppearance.AppCompat.Caption"/>


            <TextView
                android:id="@+id/txt_detail_event_type"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/sample_event_type"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/label_detail_city"
                android:textAppearance="@style/Base.TextAppearance.AppCompat.Caption"/>


            <TextView
                android:id="@+id/txt_detail_event_city"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/sample_event_city"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/label_detail_country"
                android:textAppearance="@style/Base.TextAppearance.AppCompat.Caption"/>


            <TextView
                android:id="@+id/txt_detail_event_country"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/sample_event_country"/>
        </LinearLayout>
    </ScrollView>


    <Button
        android:id="@+id/btn_rsvp"
        android:layout_width="match_parent"
        android:layout_height="64dp"
        android:layout_gravity="bottom"
        android:background="?colorPrimary"
        android:text="@string/label_button_rsvp"
        android:textAppearance="@style/Base.TextAppearance.AppCompat.Large.Inverse"/>

</android.support.design.widget.CoordinatorLayout>
