<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="8dp"
    android:elevation="4dp"
    android:translationZ="8dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/img_item_event_image"
                android:layout_width="match_parent"
                android:layout_height="192dp"
                android:background="?colorPrimary"
                android:contentDescription="@string/content_description_event_image"
                android:scaleType="centerCrop"
                android:src="@drawable/default_image"
                android:transitionName="activity_image_transition"/>


        </RelativeLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_margin="@dimen/size_16dp"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:id="@+id/txt_item_event_type"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/size_16dp"
                android:text="@string/sample_event_type"
                android:textAppearance="@style/Base.TextAppearance.AppCompat.Small"
                android:textColor="@android:color/holo_red_dark"/>

            <TextView
                android:id="@+id/txt_item_event_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/sample_event_title"
                android:textAppearance="@style/Base.TextAppearance.AppCompat.Large"/>

            <TextView
                android:id="@+id/txt_item_event_date"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/sample_event_date"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                android:textSize="20sp"/>

            <TextView
                android:id="@+id/txt_item_event_country"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/sample_event_country"
                android:textSize="20sp"/>

        </LinearLayout>

    </LinearLayout>

</android.support.v7.widget.CardView>